test/expected/limited_trust/3.alias.binding/binding/dr2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  creationTimestamp: "2020-03-03T03:07:11Z"
  generation: 1
  labels:
    mesh: limited-trust
  name: istio-limited-trust
  namespace: limited-trust
  ownerReferences:
  - apiVersion: mm.ibm.istio.io/v1
    kind: ServiceBinding
    name: helloworld
    uid: 127c87b8-5cfc-11ea-a6e3-d25a297f6585
  resourceVersion: "53793364"
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/limited-trust/destinationrules/istio-limited-trust
  uid: 1317e7a6-5cfc-11ea-b294-aaa2fadece5a
spec:
  exportTo:
  - '*'
  host: istio-limited-trust-egress-443.limited-trust.svc.cluster.local
  subsets:
  - name: helloworld-intermesh
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      portLevelSettings:
      - port:
          number: 443
        tls:
          mode: ISTIO_MUTUAL
          sni: helloworld.default.svc.cluster.local
