test/expected/limited_trust/3.alias.binding/binding/gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  creationTimestamp: "2020-03-03T03:07:10Z"
  generation: 1
  labels:
    mesh: limited-trust
  name: istio-limited-trust-helloworld-intermesh
  namespace: limited-trust
  ownerReferences:
  - apiVersion: mm.ibm.istio.io/v1
    kind: ServiceBinding
    name: helloworld
    uid: 127c87b8-5cfc-11ea-a6e3-d25a297f6585
  resourceVersion: "53793363"
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/limited-trust/gateways/istio-limited-trust-helloworld-intermesh
  uid: 130a2ab4-5cfc-11ea-b294-aaa2fadece5a
spec:
  selector:
    emcee: egressgateway
  servers:
  - hosts:
    - helloworld.default.svc.cluster.local
    port:
      name: tls
      number: 443
      protocol: TLS
    tls:
      caCertificates: /etc/certs/root-cert.pem
      mode: MUTUAL
      privateKey: /etc/certs/key.pem
      serverCertificate: /etc/certs/cert-chain.pem
