test/expected/limited_trust/3.alias.binding/binding/vs2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: "2020-03-03T03:07:11Z"
  generation: 1
  labels:
    mesh: limited-trust
    role: external
  name: helloworld-intermesh
  namespace: limited-trust
  ownerReferences:
  - apiVersion: mm.ibm.istio.io/v1
    kind: ServiceBinding
    name: helloworld
    uid: 127c87b8-5cfc-11ea-a6e3-d25a297f6585
  resourceVersion: "53793365"
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/limited-trust/virtualservices/helloworld-intermesh
  uid: 132367cc-5cfc-11ea-b294-aaa2fadece5a
spec:
  gateways:
  - istio-limited-trust-helloworld-intermesh
  hosts:
  - helloworld.default.svc.cluster.local
  tcp:
  - match:
    - port: 443
    route:
    - destination:
        host: binding-limited-trust-helloworld-intermesh.limited-trust.svc.cluster.local
        port:
          number: 15443
